--- a/app/styles/templates/_bio.scss
+++ b/app/styles/templates/_bio.scss
@@ -1,4 +1,10 @@
+#reviews {
+	background-color: $default-background-color;
+}
+
 #bio {
+	@include container;
+
 	.image {
 		@include photo-border;
 		margin-bottom: $gutter-width;
